<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vulcanussoft.tareacoursera2f.Main2Activity">
    <RelativeLayout

        android:layout_height="match_parent"
        android:layout_width="match_parent">



        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/confirDatos" />

        <TextView
            android:id="@+id/RtextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView2"
            android:layout_marginTop="44dp"
            android:text="@string/confirNombre"
            tools:layout_editor_absoluteX="163dp"
            tools:layout_editor_absoluteY="7dp" />

        <TextView
            android:id="@+id/RtextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RtextView"
            android:layout_toEndOf="@+id/textView"
            android:layout_toRightOf="@+id/textView"
            android:text="@string/confirEmail" />

        <TextView
            android:id="@+id/RtextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/RtextView2"
            android:layout_toEndOf="@+id/textView3"
            android:layout_toRightOf="@+id/textView3"
            android:text="@string/confirTel" />

        <TextView
            android:id="@+id/RtextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView4"
            android:layout_alignBottom="@+id/textView4"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignRight="@+id/textView5"
            android:text="@string/confDay" />

        <TextView
            android:id="@+id/RtextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RtextView6"
            android:layout_toEndOf="@+id/RtextView4"
            android:layout_toRightOf="@+id/RtextView4"
            android:text="@string/confirDescrip" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RtextView5"
            android:layout_marginTop="24dp"
            android:background="@color/colorAccent"
            android:text="@string/editar" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RtextView"
            android:text="@string/email" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/RtextView2"
            android:text="@string/tel" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView3"
            android:text="@string/fechaNac" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView4"
            android:text="@string/DescripCont" />

        <TextView
            android:id="@+id/RtextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/RtextView5"
            android:layout_alignStart="@+id/RtextView5"
            android:layout_below="@+id/RtextView3"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/confMon" />

        <TextView
            android:id="@+id/RtextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/RtextView3"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_toEndOf="@+id/RtextView6"
            android:layout_toRightOf="@+id/RtextView6"
            android:text="@string/confYear" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
