<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vulcanussoft.tareacoursera2f.MainActivity">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

    <RelativeLayout

        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/titulo"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tinombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/nombre">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etnombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginTop="70dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textviewf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tiemail"
            android:text="@string/fechaNac"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />


        <DatePicker
            android:id="@+id/calendarView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textviewf"
            android:layout_centerHorizontal="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/titel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tel"
            android:layout_below="@id/calendarView"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/ettel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tidescrip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/DescripCont"
            android:layout_below="@id/titel"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etdescrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tidescrip"
            android:background="@color/colorAccent"
            android:text="@string/enviar" />



    </RelativeLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
